folder for all grunt configs

--- a/boilerplate/src/html/partials/core/html-footer.ejs
+++ b/boilerplate/src/html/partials/core/html-footer.ejs
@@ -1,4 +1,5 @@
       <%- helpers.render('components/footer.ejs') %>
     </main>
+    <script type="text/javascript" src="./assets/js/script.js"></script>
   </body>
 </html>
