--- a/boilerplate/src/html/partials/core/html-header.ejs
+++ b/boilerplate/src/html/partials/core/html-header.ejs
@@ -6,8 +6,8 @@
     <title>Boilerplate</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon" href="[[assets]]img/favicon.ico" sizes="16x16" type="image/vnd.microsoft.icon" />
-    <link rel="stylesheet" href="[[assets]]css/screen<% if (helpers.target() !== 'dev') { %>.min<% } %>.css">
+    <link rel="icon" href="./assets/img/favicon.ico" sizes="16x16" type="image/vnd.microsoft.icon" />
+    <link rel="stylesheet" href="./assets/css/screen.css">
   </head>
   <body>
     <main role="main">
