--- a/boilerplate/src/html/partials/core/html-footer.ejs
+++ b/boilerplate/src/html/partials/core/html-footer.ejs
@@ -1,5 +1,10 @@
       <%- helpers.render('components/footer.ejs') %>
     </main>
-    <script type="text/javascript" src="./assets/js/script.js"></script>
+
+    <% if (helpers.target() === 'dev') { %>
+      <script data-main="./assets/js/main" src="./assets/js/vendor/require.js"></script>
+    <% } else { %>
+      <script src="./assets/js/scripts.js"></script>
+    <% } %>
   </body>
 </html>
