remove vendor folders

--- a/boilerplate/src/html/partials/core/html-footer.ejs
+++ b/boilerplate/src/html/partials/core/html-footer.ejs
@@ -2,7 +2,7 @@
     </main>
 
     <% if (helpers.target() === 'dev') { %>
-      <script data-main="./assets/js/main" src="./assets/js/vendor/require.js"></script>
+      <script data-main="./assets/js/main" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.3/require.js"></script>
     <% } else { %>
       <script src="./assets/js/scripts.js"></script>
     <% } %>
